@@ -14,7 +14,9 @@
 #define _MC_GLOB_MODE                   "mode"
 #define _MC_GLOB_PID                    "pid"
 #define _MC_GLOB_USER                   "user"
+#define _MC_GLOB_USERNAME               "nuser"
 #define _MC_GLOB_GROUP                  "group"
+#define _MC_GLOB_GROUPNAME              "ngroup"
 #define _MC_GLOB_TIME                   "time"
 #define _MC_GLOB_SIZE                   "size"
 #define _MC_GLOB_SCORE                  "score"
