@@ -25,7 +25,8 @@
  *   - % Changed default altlog output (rev. 4_b2)
  *   - ~ 'ipc' generic field broken (was showing PID instead of IPC key) (rev. 4_b3) 
  *   - + Implemented string sorting (rev. 4_b4)
- *   - % Made --sort <mode> parameter optional (rev. 4_b5)  
+ *   - % Made --sort <mode> parameter optional (rev. 4_b5)
+ *   - + 'nuser' and 'ngroup' dirlog fields (extra info), see DATA_STRUCTURES (rev. 5_b1) 
  *
  * v2.3:
  *
